jdart/src/example-Antlr/test/antlr/UDLParser.java
// $ANTLR 3.4 /Users/czb/Desktop/antlr_grammars/UDL.g 2013-08-02 11:38:37

  package test.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class UDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DIGIT", "ID", "INDEX", "LETTER", "WS", "','", "'->'", "':'", "'as'", "'column'", "'feader'", "'header'", "'row'", "'tbody'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int DIGIT=4;
    public static final int ID=5;
    public static final int INDEX=6;
    public static final int LETTER=7;
    public static final int WS=8;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public UDLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public UDLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return UDLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/czb/Desktop/antlr_grammars/UDL.g"; }



    // $ANTLR start "uid"
    // /Users/czb/Desktop/antlr_grammars/UDL.g:11:1: uid : ( baseUid | listUid | tableUid );
    public final void uid() throws RecognitionException {
        try {
            // /Users/czb/Desktop/antlr_grammars/UDL.g:12:9: ( baseUid | listUid | tableUid )
            int alt1=3;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==ID) ) {
                alt1=1;
            }
            else if ( (LA1_0==18) ) {
                int LA1_2 = input.LA(2);

                if ( (LA1_2==INDEX) ) {
                    alt1=2;
                }
                else if ( ((LA1_2 >= 14 && LA1_2 <= 17)) ) {
                    alt1=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 2, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:12:17: baseUid
                    {
                    pushFollow(FOLLOW_baseUid_in_uid49);
                    baseUid();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:13:17: listUid
                    {
                    pushFollow(FOLLOW_listUid_in_uid67);
                    listUid();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:14:17: tableUid
                    {
                    pushFollow(FOLLOW_tableUid_in_uid85);
                    tableUid();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "uid"



    // $ANTLR start "baseUid"
    // /Users/czb/Desktop/antlr_grammars/UDL.g:17:1: baseUid : ID ;
    public final void baseUid() throws RecognitionException {
        try {
            // /Users/czb/Desktop/antlr_grammars/UDL.g:18:9: ( ID )
            // /Users/czb/Desktop/antlr_grammars/UDL.g:18:17: ID
            {
            match(input,ID,FOLLOW_ID_in_baseUid133); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "baseUid"



    // $ANTLR start "listUid"
    // /Users/czb/Desktop/antlr_grammars/UDL.g:21:1: listUid : ( '{' INDEX '}' | '{' INDEX '}' 'as' ID );
    public final void listUid() throws RecognitionException {
        try {
            // /Users/czb/Desktop/antlr_grammars/UDL.g:22:9: ( '{' INDEX '}' | '{' INDEX '}' 'as' ID )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==18) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==INDEX) ) {
                    int LA2_2 = input.LA(3);

                    if ( (LA2_2==19) ) {
                        int LA2_3 = input.LA(4);

                        if ( (LA2_3==12) ) {
                            alt2=2;
                        }
                        else if ( (LA2_3==EOF) ) {
                            alt2=1;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 2, 3, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 2, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:22:17: '{' INDEX '}'
                    {
                    match(input,18,FOLLOW_18_in_listUid172); 

                    match(input,INDEX,FOLLOW_INDEX_in_listUid174); 

                    match(input,19,FOLLOW_19_in_listUid176); 

                    }
                    break;
                case 2 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:23:17: '{' INDEX '}' 'as' ID
                    {
                    match(input,18,FOLLOW_18_in_listUid194); 

                    match(input,INDEX,FOLLOW_INDEX_in_listUid196); 

                    match(input,19,FOLLOW_19_in_listUid198); 

                    match(input,12,FOLLOW_12_in_listUid200); 

                    match(input,ID,FOLLOW_ID_in_listUid202); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "listUid"



    // $ANTLR start "tableUid"
    // /Users/czb/Desktop/antlr_grammars/UDL.g:26:1: tableUid : ( tableHeaderUid | tableFooterUid | tableBodyUid );
    public final void tableUid() throws RecognitionException {
        try {
            // /Users/czb/Desktop/antlr_grammars/UDL.g:27:9: ( tableHeaderUid | tableFooterUid | tableBodyUid )
            int alt3=3;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==18) ) { // true for the first is {
                switch ( input.LA(2) ) {
                case 15:
                    {
                    alt3=1;
                    }
                    break;
                case 14:
                    {
                    alt3=2;
                    }
                    break;
                case 16:
                case 17:
                    {
                    alt3=3;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }

            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:27:17: tableHeaderUid
                    {
                    pushFollow(FOLLOW_tableHeaderUid_in_tableUid250);
                    tableHeaderUid();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:28:17: tableFooterUid
                    {
                    pushFollow(FOLLOW_tableFooterUid_in_tableUid268);
                    tableFooterUid();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:29:17: tableBodyUid
                    {
                    pushFollow(FOLLOW_tableBodyUid_in_tableUid287);
                    tableBodyUid();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "tableUid"



    // $ANTLR start "tableHeaderUid"
    // /Users/czb/Desktop/antlr_grammars/UDL.g:32:1: tableHeaderUid : ( '{' 'header' ':' INDEX '}' | '{' 'header' ':' INDEX '}' 'as' ID );
    public final void tableHeaderUid() throws RecognitionException {
        try {
            // /Users/czb/Desktop/antlr_grammars/UDL.g:33:9: ( '{' 'header' ':' INDEX '}' | '{' 'header' ':' INDEX '}' 'as' ID )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==18) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==15) ) {
                    int LA4_2 = input.LA(3);

                    if ( (LA4_2==11) ) {
                        int LA4_3 = input.LA(4);

                        if ( (LA4_3==INDEX) ) {
                            int LA4_4 = input.LA(5);

                            if ( (LA4_4==19) ) {
                                int LA4_5 = input.LA(6);

                                if ( (LA4_5==12) ) {
                                    alt4=2;
                                }
                                else if ( (LA4_5==EOF) ) {
                                    alt4=1;
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 4, 5, input);

                                    throw nvae;

                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 4, 4, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 3, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 2, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:33:17: '{' 'header' ':' INDEX '}'
                    {
                    match(input,18,FOLLOW_18_in_tableHeaderUid326); 

                    match(input,15,FOLLOW_15_in_tableHeaderUid328); 

                    match(input,11,FOLLOW_11_in_tableHeaderUid330); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableHeaderUid332); 

                    match(input,19,FOLLOW_19_in_tableHeaderUid334); 

                    }
                    break;
                case 2 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:34:17: '{' 'header' ':' INDEX '}' 'as' ID
                    {
                    match(input,18,FOLLOW_18_in_tableHeaderUid352); 

                    match(input,15,FOLLOW_15_in_tableHeaderUid354); 

                    match(input,11,FOLLOW_11_in_tableHeaderUid356); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableHeaderUid358); 

                    match(input,19,FOLLOW_19_in_tableHeaderUid360); 

                    match(input,12,FOLLOW_12_in_tableHeaderUid362); 

                    match(input,ID,FOLLOW_ID_in_tableHeaderUid364); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "tableHeaderUid"



    // $ANTLR start "tableFooterUid"
    // /Users/czb/Desktop/antlr_grammars/UDL.g:37:1: tableFooterUid : ( '{' 'feader' ':' INDEX '}' | '{' 'feader' ':' INDEX '}' 'as' ID );
    public final void tableFooterUid() throws RecognitionException {
        try {
            // /Users/czb/Desktop/antlr_grammars/UDL.g:38:9: ( '{' 'feader' ':' INDEX '}' | '{' 'feader' ':' INDEX '}' 'as' ID )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==18) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==14) ) {
                    int LA5_2 = input.LA(3);

                    if ( (LA5_2==11) ) {
                        int LA5_3 = input.LA(4);

                        if ( (LA5_3==INDEX) ) {
                            int LA5_4 = input.LA(5);

                            if ( (LA5_4==19) ) {
                                int LA5_5 = input.LA(6);

                                if ( (LA5_5==12) ) {
                                    alt5=2;
                                }
                                else if ( (LA5_5==EOF) ) {
                                    alt5=1;
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 5, 5, input);

                                    throw nvae;

                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 5, 4, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 5, 3, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 2, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:38:17: '{' 'feader' ':' INDEX '}'
                    {
                    match(input,18,FOLLOW_18_in_tableFooterUid403); 

                    match(input,14,FOLLOW_14_in_tableFooterUid405); 

                    match(input,11,FOLLOW_11_in_tableFooterUid407); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableFooterUid409); 

                    match(input,19,FOLLOW_19_in_tableFooterUid411); 

                    }
                    break;
                case 2 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:39:17: '{' 'feader' ':' INDEX '}' 'as' ID
                    {
                    match(input,18,FOLLOW_18_in_tableFooterUid429); 

                    match(input,14,FOLLOW_14_in_tableFooterUid431); 

                    match(input,11,FOLLOW_11_in_tableFooterUid433); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableFooterUid435); 

                    match(input,19,FOLLOW_19_in_tableFooterUid437); 

                    match(input,12,FOLLOW_12_in_tableFooterUid439); 

                    match(input,ID,FOLLOW_ID_in_tableFooterUid441); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "tableFooterUid"



    // $ANTLR start "tableBodyUid"
    // /Users/czb/Desktop/antlr_grammars/UDL.g:42:1: tableBodyUid : ( '{' 'row' ':' INDEX ',' 'column' ':' INDEX '}' | '{' 'row' ':' INDEX ',' 'column' ':' INDEX '}' 'as' ID | '{' 'row' '->' ID ',' 'column' ':' INDEX '}' | '{' 'row' '->' ID ',' 'column' ':' INDEX '}' 'as' ID | '{' 'row' ':' INDEX ',' 'column' '->' ID '}' | '{' 'row' ':' INDEX ',' 'column' '->' ID '}' 'as' ID | '{' 'row' '->' ID ',' 'column' '->' ID '}' | '{' 'row' '->' ID ',' 'column' '->' ID '}' 'as' ID | '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' ':' INDEX '}' | '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' ':' INDEX '}' 'as' ID | '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' ':' INDEX '}' | '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' ':' INDEX '}' 'as' ID | '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' '->' ID '}' | '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' '->' ID '}' 'as' ID | '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' '->' ID '}' | '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' '->' ID '}' 'as' ID );
    public final void tableBodyUid() throws RecognitionException {
        try {
            // /Users/czb/Desktop/antlr_grammars/UDL.g:43:9: ( '{' 'row' ':' INDEX ',' 'column' ':' INDEX '}' | '{' 'row' ':' INDEX ',' 'column' ':' INDEX '}' 'as' ID | '{' 'row' '->' ID ',' 'column' ':' INDEX '}' | '{' 'row' '->' ID ',' 'column' ':' INDEX '}' 'as' ID | '{' 'row' ':' INDEX ',' 'column' '->' ID '}' | '{' 'row' ':' INDEX ',' 'column' '->' ID '}' 'as' ID | '{' 'row' '->' ID ',' 'column' '->' ID '}' | '{' 'row' '->' ID ',' 'column' '->' ID '}' 'as' ID | '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' ':' INDEX '}' | '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' ':' INDEX '}' 'as' ID | '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' ':' INDEX '}' | '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' ':' INDEX '}' 'as' ID | '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' '->' ID '}' | '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' '->' ID '}' 'as' ID | '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' '->' ID '}' | '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' '->' ID '}' 'as' ID )
            int alt6=16;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:43:17: '{' 'row' ':' INDEX ',' 'column' ':' INDEX '}'
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid480); 

                    match(input,16,FOLLOW_16_in_tableBodyUid482); 

                    match(input,11,FOLLOW_11_in_tableBodyUid484); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid486); 

                    match(input,9,FOLLOW_9_in_tableBodyUid488); 

                    match(input,13,FOLLOW_13_in_tableBodyUid490); 

                    match(input,11,FOLLOW_11_in_tableBodyUid492); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid494); 

                    match(input,19,FOLLOW_19_in_tableBodyUid496); 

                    }
                    break;
                case 2 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:44:17: '{' 'row' ':' INDEX ',' 'column' ':' INDEX '}' 'as' ID
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid514); 

                    match(input,16,FOLLOW_16_in_tableBodyUid516); 

                    match(input,11,FOLLOW_11_in_tableBodyUid518); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid520); 

                    match(input,9,FOLLOW_9_in_tableBodyUid522); 

                    match(input,13,FOLLOW_13_in_tableBodyUid524); 

                    match(input,11,FOLLOW_11_in_tableBodyUid526); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid528); 

                    match(input,19,FOLLOW_19_in_tableBodyUid530); 

                    match(input,12,FOLLOW_12_in_tableBodyUid532); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid534); 

                    }
                    break;
                case 3 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:45:17: '{' 'row' '->' ID ',' 'column' ':' INDEX '}'
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid552); 

                    match(input,16,FOLLOW_16_in_tableBodyUid554); 

                    match(input,10,FOLLOW_10_in_tableBodyUid556); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid558); 

                    match(input,9,FOLLOW_9_in_tableBodyUid560); 

                    match(input,13,FOLLOW_13_in_tableBodyUid562); 

                    match(input,11,FOLLOW_11_in_tableBodyUid564); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid566); 

                    match(input,19,FOLLOW_19_in_tableBodyUid568); 

                    }
                    break;
                case 4 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:46:17: '{' 'row' '->' ID ',' 'column' ':' INDEX '}' 'as' ID
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid586); 

                    match(input,16,FOLLOW_16_in_tableBodyUid588); 

                    match(input,10,FOLLOW_10_in_tableBodyUid590); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid592); 

                    match(input,9,FOLLOW_9_in_tableBodyUid594); 

                    match(input,13,FOLLOW_13_in_tableBodyUid596); 

                    match(input,11,FOLLOW_11_in_tableBodyUid598); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid600); 

                    match(input,19,FOLLOW_19_in_tableBodyUid602); 

                    match(input,12,FOLLOW_12_in_tableBodyUid604); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid606); 

                    }
                    break;
                case 5 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:47:17: '{' 'row' ':' INDEX ',' 'column' '->' ID '}'
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid624); 

                    match(input,16,FOLLOW_16_in_tableBodyUid626); 

                    match(input,11,FOLLOW_11_in_tableBodyUid628); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid630); 

                    match(input,9,FOLLOW_9_in_tableBodyUid632); 

                    match(input,13,FOLLOW_13_in_tableBodyUid634); 

                    match(input,10,FOLLOW_10_in_tableBodyUid636); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid638); 

                    match(input,19,FOLLOW_19_in_tableBodyUid640); 

                    }
                    break;
                case 6 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:48:17: '{' 'row' ':' INDEX ',' 'column' '->' ID '}' 'as' ID
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid658); 

                    match(input,16,FOLLOW_16_in_tableBodyUid660); 

                    match(input,11,FOLLOW_11_in_tableBodyUid662); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid664); 

                    match(input,9,FOLLOW_9_in_tableBodyUid666); 

                    match(input,13,FOLLOW_13_in_tableBodyUid668); 

                    match(input,10,FOLLOW_10_in_tableBodyUid670); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid672); 

                    match(input,19,FOLLOW_19_in_tableBodyUid674); 

                    match(input,12,FOLLOW_12_in_tableBodyUid676); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid678); 

                    }
                    break;
                case 7 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:49:17: '{' 'row' '->' ID ',' 'column' '->' ID '}'
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid696); 

                    match(input,16,FOLLOW_16_in_tableBodyUid698); 

                    match(input,10,FOLLOW_10_in_tableBodyUid700); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid702); 

                    match(input,9,FOLLOW_9_in_tableBodyUid704); 

                    match(input,13,FOLLOW_13_in_tableBodyUid706); 

                    match(input,10,FOLLOW_10_in_tableBodyUid708); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid710); 

                    match(input,19,FOLLOW_19_in_tableBodyUid712); 

                    }
                    break;
                case 8 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:50:17: '{' 'row' '->' ID ',' 'column' '->' ID '}' 'as' ID
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid730); 

                    match(input,16,FOLLOW_16_in_tableBodyUid732); 

                    match(input,10,FOLLOW_10_in_tableBodyUid734); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid736); 

                    match(input,9,FOLLOW_9_in_tableBodyUid738); 

                    match(input,13,FOLLOW_13_in_tableBodyUid740); 

                    match(input,10,FOLLOW_10_in_tableBodyUid742); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid744); 

                    match(input,19,FOLLOW_19_in_tableBodyUid746); 

                    match(input,12,FOLLOW_12_in_tableBodyUid748); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid750); 

                    }
                    break;
                case 9 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:51:17: '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' ':' INDEX '}'
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid768); 

                    match(input,17,FOLLOW_17_in_tableBodyUid770); 

                    match(input,11,FOLLOW_11_in_tableBodyUid772); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid774); 

                    match(input,9,FOLLOW_9_in_tableBodyUid776); 

                    match(input,16,FOLLOW_16_in_tableBodyUid778); 

                    match(input,11,FOLLOW_11_in_tableBodyUid780); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid782); 

                    match(input,9,FOLLOW_9_in_tableBodyUid784); 

                    match(input,13,FOLLOW_13_in_tableBodyUid786); 

                    match(input,11,FOLLOW_11_in_tableBodyUid788); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid790); 

                    match(input,19,FOLLOW_19_in_tableBodyUid792); 

                    }
                    break;
                case 10 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:52:17: '{' 'tbody' ':' INDEX ',' 'row' ':' INDEX ',' 'column' ':' INDEX '}' 'as' ID
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid810); 

                    match(input,17,FOLLOW_17_in_tableBodyUid812); 

                    match(input,11,FOLLOW_11_in_tableBodyUid814); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid816); 

                    match(input,9,FOLLOW_9_in_tableBodyUid818); 

                    match(input,16,FOLLOW_16_in_tableBodyUid820); 

                    match(input,11,FOLLOW_11_in_tableBodyUid822); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid824); 

                    match(input,9,FOLLOW_9_in_tableBodyUid826); 

                    match(input,13,FOLLOW_13_in_tableBodyUid828); 

                    match(input,11,FOLLOW_11_in_tableBodyUid830); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid832); 

                    match(input,19,FOLLOW_19_in_tableBodyUid834); 

                    match(input,12,FOLLOW_12_in_tableBodyUid836); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid838); 

                    }
                    break;
                case 11 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:53:17: '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' ':' INDEX '}'
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid856); 

                    match(input,17,FOLLOW_17_in_tableBodyUid858); 

                    match(input,11,FOLLOW_11_in_tableBodyUid860); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid862); 

                    match(input,9,FOLLOW_9_in_tableBodyUid864); 

                    match(input,16,FOLLOW_16_in_tableBodyUid866); 

                    match(input,10,FOLLOW_10_in_tableBodyUid868); 

                    match(input,ID,FOLLOW_ID_in_tableBodyUid870); 

                    match(input,9,FOLLOW_9_in_tableBodyUid872); 

                    match(input,13,FOLLOW_13_in_tableBodyUid874); 

                    match(input,11,FOLLOW_11_in_tableBodyUid876); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid878); 

                    match(input,19,FOLLOW_19_in_tableBodyUid880); 

                    }
                    break;
                case 12 :
                    // /Users/czb/Desktop/antlr_grammars/UDL.g:54:17: '{' 'tbody' ':' INDEX ',' 'row' '->' ID ',' 'column' ':' INDEX '}' 'as' ID
                    {
                    match(input,18,FOLLOW_18_in_tableBodyUid898); 

                    match(input,17,FOLLOW_17_in_tableBodyUid900); 

                    match(input,11,FOLLOW_11_in_tableBodyUid902); 

                    match(input,INDEX,FOLLOW_INDEX_in_tableBodyUid904); 

                    match(input,9,FOLLOW_9_in_tableBodyUid906); 
